Recipes migration hotfix